# sensorsystem

./: .gitignore  .gitmodules  authors.txt
SensorSystem/: CMakeLists.txt
SensorSystem/cmake/: FindMariaDBClient.cmake
SensorSystem/config/: mariadb.ini
SensorSystem/src/: BME280.cpp  BME280.h  TrimmingParameters.cpp  TrimmingParameters.h  main.cpp
SensorSystem/src/Config/: MariaDBConfig.cpp  MariaDBConfig.h
SensorSystem/src/Exception/: BadMethodCallException.cpp  BadMethodCallException.h
SensorSystem/src/Repository/: BME280Repository.cpp  BME280Repository.h
documentation/: documentation stokedlist.txt  enduser-documentation.md  frontend-uml.drawio  technical-documentation.md  technical-documentation.odt  web-uml.drawio
documentation/html/: test.html
web/: composer.json  docker-compose.pi.yml  docker-compose.yml  svnignore.txt
web/config/: commands.php  config.php  db.php  dependencies.php  routes.php
web/data/sql/: colors.sql  foreign_key_constraints.sql  measurements.sql
web/docker/nginx/: nginx.conf
web/docker/php-cli/: Dockerfile
web/docker/php-fpm/: Dockerfile
web/frontend/: package-lock.json  package.json
web/frontend/public/: index.html  manifest.json
web/frontend/src/: App.css  App.js
web/frontend/src/components/: Button.js  Container.js  DebugTest.js  (+2 more)
web/module/: bootstrap.php  project.xmi
web/public/: index.php
web/scripts/: app-rebuild-containers  app-start-containers  app-stop-containers  debug-insert-perlin-data  ers-login.sh  frontend-build  frontend-dependencies  frontend-dev-server  random-points.php  update-date.sh
(+42 files in other folders)
